2014-02-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3_private.h: Add EDBG/CMSIS-DAP specific constants.
	* jtag3.c: Add EDBG/CMSIS-DAP protocol implementation.
	* serial.h: (Dito.)
	* usbdevs.h: (Dito.)
	* usb_libusb.c: (Dito.)
	* configure.ac: (Dito.)
	* avrdude.conf.in: Add JTAGICE3 and XplainedPro entries using
	EDBG.
	* configure.ac: Bump version date.

2014-02-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usb_libusb.c (usbdev_recv_frame): Fix a bug where a new recv
	request was issued even though all desired data had aldready
	been received.

2014-02-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* serial.h: Change the second parameter of the ser_open method
	from "baud" into a "union pinfo", so the USB parameters can be
	passed without hacks.
	* arduino.c: (Dito.)
	* avr910.c: (Dito.)
	* buspirate.c: (Dito.)
	* butterfly.c: (Dito.)
	* jtag3.c: (Dito.)
	* jtagmkI.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* ser_avrdoper.c: (Dito.)
	* ser_posix.c: (Dito.)
	* ser_win32.c: (Dito.)
	* stk500.c: (Dito.)
	* stk500v2.c: (Dito.)
	* usb_libusb.c: (Dito.)
	* wiring.c: (Dito.)

2014-01-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[bug #41402] dfu.c missing include <stdint.h>
	* dfu.c: include <stdint.h> where uint16_t is defined

2014-01-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega256RFR2 et al.): Fix EEPROM size.

2014-01-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[bug #41357] OS X: Avrdude messes with the usb stack?
	* usb_libusb.c (usbdev_close): Only issue the usb_reset() for
	Linux systems, as these are the only ones that seem to require
	it under some circumstances.

2014-01-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (libelf): check against elf_getshdrstrndx() rather
	than just elf_begin() only, so it is clear we found a sufficiently
	recent libelf to work with.

2014-01-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Alan Horstmann: